--- a/a.html
+++ b/a.html
@@ -4,6 +4,6 @@
 	<title></title>
 </head>
 <body>
-<h1 style="background-color: red">ttttt</h1>
+<h1 style="background-color: red; color: white">ttttt</h1>
 </body>
 </html>
